--- a/assets/css/form-style.css
+++ b/assets/css/form-style.css
@@ -1,8 +1,12 @@
 /* form */
 input::placeholder {
-  padding-left: 12px;
+  /* padding-left: 12px; */
   font-size: 13px;
   color: #888;
+}
+
+input {
+  padding-left: 10px;
 }
 
 .form {
@@ -17,6 +21,7 @@ input::placeholder {
   height: 22.22px;
   color: #333;
 }
+
 #tipo-select {
   width: 100%;
   border: 1px solid #979797;
@@ -33,6 +38,7 @@ input::placeholder {
   height: 22.22px;
   font-size: 14px;
 }
+
 #tipo_mercadoria {
   width: 100%;
   height: 32px;
@@ -47,6 +53,7 @@ input::placeholder {
   font-size: 14px;
   height: 22.22px;
 }
+
 #tipo_valor {
   width: 100%;
   height: 32px;
