--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,27 @@
   font-family: "Lato", sans-serif;
 }
 
+/* Botão "deletar" */
+.oi>button {
+  cursor: pointer;
+  border: none;
+  margin-left: 10px;
+  color: #282828;
+  background: transparent;
+  transition: 0.2s;
+  font-size: 15px;
+}
+
+.oi>button:hover {
+  transform: scale(1.3);
+  color: red;
+}
+
+.oi {
+  display: flex;
+  align-items: baseline;
+}
+
 /* MOBILE */
 .mobile {
   background-color: #fff;
@@ -44,10 +65,12 @@ Status Bar
   align-items: center;
   margin-left: 6px;
 }
+
 .bolinhas {
   width: 33.5px;
   margin-right: 9px;
 }
+
 .sinal {
   width: 12px;
 }
@@ -57,13 +80,16 @@ Status Bar
   align-items: center;
   margin-right: 6px;
 }
+
 .bluetooth {
   width: 23px;
 }
+
 .porcentagem {
   font-size: 12px;
   color: #ffffff;
 }
+
 .bateria {
   width: 22.5px;
   margin-left: 5px;
@@ -115,12 +141,14 @@ HEADER
   cursor: pointer;
   color: #fff;
 }
+
 .limpar-dados {
   display: block;
   font-size: 17px;
   cursor: pointer;
   color: #fff;
 }
+
 .vector-x {
   display: block;
   align-self: start;
@@ -166,9 +194,11 @@ Account
   cursor: pointer;
   transition: opacity 0.15s;
 }
+
 .form .input_botao:hover {
   opacity: 0.8;
 }
+
 .form .input_botao:active {
   opacity: 0.6;
 }
@@ -194,9 +224,11 @@ Account
   font-size: 14px;
   color: #000;
 }
+
 .extrato-mercadoria {
   padding-left: 30px;
 }
+
 .extrato-valor {
   padding-right: 42px;
 }
@@ -267,6 +299,7 @@ Account
   align-items: center;
   justify-content: space-between;
 }
+
 .total {
   /* display: inline-block;*/
   margin-top: 11px;
@@ -275,6 +308,7 @@ Account
   font-weight: bold;
   font-size: 14px;
 }
+
 .total-valor {
   /*display: inline-block;*/
   margin-top: 11px;
@@ -346,6 +380,7 @@ MEDIA QUERIES
   .input-valor {
     flex-grow: 1;
   }
+
   .input-mercadoria {
     flex-grow: 2;
     margin: 0px 20px;
@@ -369,6 +404,7 @@ MEDIA QUERIES
     position: absolute;
     top: 0;
     right: 0;
+    z-index: 1;
   }
 }
 
@@ -380,6 +416,7 @@ MEDIA QUERIES
     height: 80px;
     align-items: center;
   }
+
   .logo {
     margin: 22px;
     width: 40px;
@@ -406,6 +443,7 @@ MEDIA QUERIES
   .cadastro-transacoes:hover {
     opacity: 0.8;
   }
+
   .limpar-dados:active,
   .cadastro-transacoes:active {
     opacity: 0.6;
